rounding out the wireframes

--- a/res/layout/set_message_fragment.xml
+++ b/res/layout/set_message_fragment.xml
@@ -8,48 +8,53 @@
         android:id="@+id/secret_message_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/encryption_options_holder"
-        android:gravity="top|left"
-        android:layout_alignParentTop="true" />
+        android:layout_above="@+id/secret_message_chars_left_holder"
+        android:layout_alignParentTop="true"
+        android:gravity="top|left" />
 
     <LinearLayout
         android:id="@+id/encryption_options_holder"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical" >
+        android:layout_alignParentRight="true"
+        android:padding="6dip"
+        android:layout_marginRight="10dip"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal" >
 
-        <LinearLayout
-            android:id="@+id/secret_message_chars_left_holder"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="6dip"
-            android:paddingRight="6dip" >
-
-            <TextView
-                android:id="@+id/secret_message_chars_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dip"
-                android:text="@string/chars_left" />
-        </LinearLayout>
-
-        <CheckBox
+        <TextView
             android:id="@+id/encrypt_message_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/encryption_select" />
+            android:layout_marginRight="16dip"
+            android:text="@string/e" />
 
-        <CheckBox
+        <TextView
             android:id="@+id/password_protect_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/password_protect_select" />
+            android:text="@string/p" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/secret_message_chars_left_holder"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:paddingLeft="6dip"
+        android:paddingRight="6dip" >
+
+        <TextView
+            android:id="@+id/secret_message_chars_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:text="@string/chars_left" />
     </LinearLayout>
 
 </RelativeLayout>
