--- a/res/layout/decryt_image_fragment.xml
+++ b/res/layout/decryt_image_fragment.xml
@@ -3,14 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-	<TextView
+	<TextView style="@style/h2"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:text="@string/result_title" />
-    <EditText
+    <EditText style="@style/message_holder"
         android:id="@+id/secret_message_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="top|left" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
