--- a/res/layout/pixel_knot_activity.xml
+++ b/res/layout/pixel_knot_activity.xml
@@ -1,39 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/activity_root"
+    android:background="@drawable/pk_bkg"
     android:orientation="vertical" >
-    <LinearLayout style="@style/action_display"
-            android:id="@+id/action_display_"
-            android:layout_width="fill_parent"
-            android:layout_height="35dip"
-            android:orientation="horizontal" />
+
+    <RelativeLayout
+        android:id="@+id/pk_header"
+        android:layout_width="fill_parent"
+        android:layout_height="45dip"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/pk_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:padding="3dip"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            style="@style/h1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="2dip"
+            android:layout_toRightOf="@+id/pk_logo"
+            android:text="@string/app_name" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/action_display_"
+        style="@style/action_display"
+        android:layout_width="wrap_content"
+        android:layout_height="45dip"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/fragment_holder"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/action_display_"
-        android:layout_above="@+id/action_display" />
+        android:layout_above="@+id/action_display"
+        android:layout_below="@+id/pk_header"
+        android:background="@drawable/pk_frame" />
 
     <LinearLayout
         android:id="@+id/action_display"
         android:layout_width="fill_parent"
-        android:layout_height="40dip"
+        android:layout_height="95dip"
         android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
         android:orientation="vertical" >
 
         <LinearLayout
             android:id="@+id/progress_holder"
-            android:layout_width="fill_parent"
-            android:layout_height="5dip"
+            android:layout_width="wrap_content"
+            android:layout_height="35dip"
+            android:gravity="center"
             android:orientation="horizontal" />
 
-        <LinearLayout style="@style/action_display"
+        <LinearLayout
             android:id="@+id/options_holder"
-            android:layout_width="fill_parent"
-            android:layout_height="35dip"
+            style="@style/action_display"
+            android:layout_width="wrap_content"
+            android:layout_height="45dip"
             android:orientation="horizontal" />
     </LinearLayout>
 
