--- a/res/layout/set_message_fragment.xml
+++ b/res/layout/set_message_fragment.xml
@@ -1,59 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <LinearLayout
-        android:id="@+id/secret_message_chars_left_holder"
-        android:layout_width="fill_parent"
+
+    <TextView
+        style="@style/h2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="6dip"
-        android:paddingRight="6dip" >
-
-        <TextView
-            android:id="@+id/secret_message_chars_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dip"
-            android:text="@string/chars_left" />
-    </LinearLayout>
+        android:text="@string/result_title" />
 
     <EditText
         android:id="@+id/secret_message_holder"
+        style="@style/message_holder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/secret_message_chars_left_holder"
-        android:gravity="top|left" />
+        android:layout_height="match_parent"
+        android:hint="@string/secret_message_hint" />
 
-    <LinearLayout
-        android:id="@+id/encryption_options_holder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/secret_message_holder"
-        android:padding="6dip"
-        android:layout_marginRight="10dip"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/encrypt_message_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dip"
-            android:text="@string/e" />
-
-        <TextView
-            android:id="@+id/password_protect_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/p" />
-    </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
