--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="android:textColor">#ffffffff</item>
         <item name="android:layout_margin">2dp</item>
         <item name="android:gravity">top|left</item>
+        <item name="android:textSize">20sp</item>
     </style>
     <style name="h1">
         <item name="android:textSize">26sp</item>
