--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -16,6 +16,14 @@
         <item>fa</item>
     </string-array>
     
+    <string-array name="knot_names">
+        <item>@string/knot_catspaw</item>
+        <item>@string/knot_lariatloop</item>
+        <item>@string/knot_overhand</item>
+        <item>@string/knot_sailors</item>
+        <item>@string/knot_stevedors</item>
+    </string-array>
+    
     <string-array name="about_software">
         <item>@string/about_license_f_5_algorithm</item>
         <item>@string/about_license_bcc</item>
