--- a/res/layout/pixel_knot_loader.xml
+++ b/res/layout/pixel_knot_loader.xml
@@ -6,11 +6,17 @@
     android:weightSum="1.0"
     android:gravity="center"
     android:background="#ff000000" >
+    <TextView
+        android:id="@+id/knot_warning"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="0.05"
+        android:visibility="gone" />
     <ImageView
         android:id="@+id/knot_image"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
-        android:layout_weight="0.6"
+        android:layout_weight="0.55"
         android:gravity="center" />
     <TextView
         android:id="@+id/knot_title"
