--- a/app/res/layout/pixel_knot_loader.xml
+++ b/app/res/layout/pixel_knot_loader.xml
@@ -33,13 +33,14 @@
          />
 
     <info.guardianproject.pixelknot.screens.mods.PKSubHeader  style="@style/h2"
+        android:id="@+id/current_progress"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
         android:layout_weight="0.1"
         android:paddingTop="8dip"
         android:paddingBottom="8dip"
         android:gravity="center"
-        android:text="@string/loading" />
+        android:text="@string/working" />
     
 
 </LinearLayout>
