--- a/app/res/drawable/share_padded_selector.xml
+++ b/app/res/drawable/share_padded_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_focused="true" android:state_pressed="false" android:drawable="@drawable/share_padded" />
-    <item android:state_focused="true" android:state_pressed="true" android:drawable="@drawable/share_padded_" />
-    <item android:state_focused="false" android:state_pressed="true" android:drawable="@drawable/share_padded_" />
-	<item android:drawable="@drawable/share_padded" />
+    <item android:state_focused="true" android:state_pressed="false" android:drawable="@drawable/share" />
+    <item android:state_focused="true" android:state_pressed="true" android:drawable="@drawable/share_" />
+    <item android:state_focused="false" android:state_pressed="true" android:drawable="@drawable/share_" />
+	<item android:drawable="@drawable/share" />
 </selector>
