--- a/app/res/layout/confirm_passphrase_override_dialog.xml
+++ b/app/res/layout/confirm_passphrase_override_dialog.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    style="@style/dialog_holder" >
     <TextView
-        style="@style/h2"
+        style="@style/h2_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/warning" />
     <TextView
-        style="@style/p"
+        style="@style/p_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/confirm_passphrase_override" />
