--- a/app/res/layout/select_mode_dialog.xml
+++ b/app/res/layout/select_mode_dialog.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    style="@style/dialog_holder" >
     <TextView
-        style="@style/h1"
+        style="@style/h2_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/image_detected" />
     <TextView
-        style="@style/p"
+        style="@style/p_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/select_mode_text" />
