--- a/app/res/layout/set_passphrase_dialog.xml
+++ b/app/res/layout/set_passphrase_dialog.xml
@@ -2,39 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    style="@style/dialog_holder" >
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
+        android:layout_weight="0.3"
+        android:layout_marginTop="10sp"
         android:orientation="horizontal" >
-	    <TextView
+	    <TextView style="@style/p_dialog"
 	        android:id="@+id/passphrase_monitor"
 	        android:layout_width="0dp"
 	        android:layout_height="match_parent"
-	        android:layout_weight="0.5" />
-	    <ImageButton
+	        android:layout_weight="0.6" />
+	    <ImageButton style="@style/dialog_button"
 	        android:id="@+id/generate_random_passphrase"
 	        android:layout_width="0dp"
 	        android:layout_height="match_parent"
-	        android:src="@drawable/password_selector"
-	        android:layout_weight="0.25" />
-	    <ImageButton
+	        android:src="@drawable/generate_password_selector"
+	        android:layout_weight="0.2" />
+	    <ImageButton style="@style/dialog_button"
 	        android:id="@+id/clear_passphrase"
 	        android:layout_width="0dp"
 	        android:layout_height="match_parent"
-	        android:src="@drawable/share_inactive_selector"
-	        android:layout_weight="0.25" />
+	        android:src="@drawable/clear_value_selector"
+	        android:layout_weight="0.2" />
     </LinearLayout>
 
-    <EditText
+    <EditText style="@style/dialog_edittext"
         android:id="@+id/passphrase_holder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8"
-        android:ems="10"
-        android:inputType="textMultiLine" >
+        android:layout_weight="0.7" >
 
         <requestFocus />
     </EditText>
