--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -24,6 +24,18 @@
         <item name="android:gravity">top|left</item>
         <item name="android:textSize">20sp</item>
     </style>
+    <style name="dialog_holder">
+        <item name="android:background">#ffffff</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="dialog_button">
+        <item name="android:background">#ffffff</item>
+    </style>
+    <style name="dialog_edittext">
+        <item name="android:textColor">#80000000</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="android:minLines">3</item>
+    </style>
     <style name="h1">
         <item name="android:textSize">36sp</item>
         <item name="android:textColor">#ffffffff</item>
@@ -31,6 +43,14 @@
     <style name="h2">
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">#ffffffff</item>
+        <item name="android:layout_marginBottom">10dip</item>
+        <item name="android:padding">6dip</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="h2_dialog">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:layout_marginBottom">10dip</item>
         <item name="android:padding">6dip</item>
         <item name="android:layout_width">match_parent</item>
@@ -44,6 +64,13 @@
         <item name="android:textSize">20sp</item>
         <item name="android:padding">6dip</item>
         <item name="android:textColor">#ffffffff</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="p_dialog">
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">6dip</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
