--- a/app/res/layout/input_passphrase_dialog.xml
+++ b/app/res/layout/input_passphrase_dialog.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    style="@style/dialog_holder" >
     <TextView
         style="@style/h2"
         android:layout_width="match_parent"
