--- a/app/res/layout/loader_canceled_dialog.xml
+++ b/app/res/layout/loader_canceled_dialog.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    <TextView
+    android:orientation="vertical"
+    style="@style/dialog_holder" >
+    <TextView style="@style/p_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/loader_canceled_message" />
-
 </LinearLayout>
