--- a/app/res/layout/pixel_knot_activity.xml
+++ b/app/res/layout/pixel_knot_activity.xml
@@ -14,9 +14,9 @@
 
     <LinearLayout
         android:id="@+id/action_display"
+        android:background="@color/pk_white"
         android:layout_width="fill_parent"
         android:layout_height="110dip"
-        android:layout_marginBottom="6dip"
         android:layout_alignParentBottom="true"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
