--- a/app/res/layout/pixel_knot_loader.xml
+++ b/app/res/layout/pixel_knot_loader.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:weightSum="1.0"
     android:gravity="center"
-    android:background="#ff000000" >
+    android:background="@color/pk_grey" >
     <ImageView
         android:id="@+id/knot_image"
         android:layout_width="fill_parent"
@@ -29,8 +29,7 @@
         android:paddingLeft="8dip"
         android:paddingRight="8dip"
         android:gravity="center"
-        android:progressDrawable="@drawable/progress_bar"
-         />
+        android:progressDrawable="@drawable/progress_bar" />
 
     <info.guardianproject.pixelknot.screens.mods.PKSubHeader  style="@style/h2"
         android:id="@+id/current_progress"
