--- a/app/res/values/arrays.xml
+++ b/app/res/values/arrays.xml
@@ -46,16 +46,14 @@
         <item>@string/about_license_f_5_algorithm</item>
         <item>@string/about_license_bcc</item>
         <item>@string/about_license_pgp</item>
-        <item>@string/about_license_apg</item>
-        <item>@string/about_license_iconmonstr</item>
+        <item>@string/about_license_other_icons</item>
         <item>@string/about_license_deviantart</item>
     </string-array>
     <string-array name="about_software_">
         <item>http://code.google.com/p/f5-steganography/</item>
         <item>http://www.bouncycastle.org/</item>
         <item>http://www.gnupg.org/</item>
-        <item>http://thialfihar.org/projects/apg/</item>
-        <item>http://iconmonstr.com</item>
+        <item>http://othericons.madebysource.com/</item>
         <item>http://mactyler.deviantart.com</item>
     </string-array>
     
