--- a/app/res/layout/decryt_image_fragment.xml
+++ b/app/res/layout/decryt_image_fragment.xml
@@ -3,13 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-	<TextView style="@style/h2"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:text="@string/result_title" />
     <EditText style="@style/message_holder"
         android:id="@+id/secret_message_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:inputType="textNoSuggestions" />
 
 </LinearLayout>
