--- a/app/res/layout/set_message_fragment.xml
+++ b/app/res/layout/set_message_fragment.xml
@@ -9,6 +9,7 @@
         style="@style/message_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:hint="@string/secret_message_hint" />
+        android:hint="@string/secret_message_hint"
+        android:inputType="textNoSuggestions" />
 
 </LinearLayout>
