--- a/app/res/drawable/pk_passphrase_holder.xml
+++ b/app/res/drawable/pk_passphrase_holder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="1px" android:color="@color/pk_dark_grey" />
+    <stroke android:width="4px" android:color="@color/pk_blue" />
     <solid android:color="@color/pk_white" />
 </shape>
