--- a/app/res/layout/input_passphrase_dialog.xml
+++ b/app/res/layout/input_passphrase_dialog.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/passphrase_protection_text" />
-    <EditText style="@style/dialog_edittext"
+    <EditText style="@style/passphrase_holder"
         android:id="@+id/passphrase_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
