--- a/app/res/layout/loader_canceled_dialog.xml
+++ b/app/res/layout/loader_canceled_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:minHeight="20dp"
     android:orientation="vertical"
     style="@style/dialog_holder" >
     <TextView style="@style/p_dialog"
