--- a/app/res/layout/pixel_knot_loader.xml
+++ b/app/res/layout/pixel_knot_loader.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:weightSum="1.0"
     android:gravity="center"
-    android:background="@color/pk_grey" >
+    android:padding="4dp"
+    android:background="@drawable/pk_loader" >
     <ImageView
         android:id="@+id/knot_image"
         android:layout_width="fill_parent"
