--- a/app/res/menu/menu.xml
+++ b/app/res/menu/menu.xml
@@ -3,6 +3,9 @@
 	<item android:id="@+id/pk_about"
 	    android:title="@string/about"
 	    android:showAsAction="never" />
+	<item android:id="@+id/pk_faq"
+	    android:title="@string/faq"
+	    android:showAsAction="never" />
 	<item android:id="@+id/pk_preferences"
 	    android:title="@string/preferences"
 	    android:showAsAction="never" />    
