--- a/PixelKnot/src/main/res/layout/album_external_item.xml
+++ b/PixelKnot/src/main/res/layout/album_external_item.xml
@@ -5,17 +5,21 @@ android:layout_height="wrap_content"
 android:orientation="vertical"
 android:padding="10dp">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <info.guardianproject.pixelknot.views.SquareFrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:padding="4dp"
-        android:gravity="center"
-        android:background="@drawable/camera_frame"
-        android:text="@string/action_pick_external"
-        android:textAppearance="@style/TextAppearanceNormal"
-        android:textColor="@color/colorPrimary"
-        />
+        android:layout_height="match_parent">
+        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:gravity="center"
+            android:background="@drawable/camera_frame"
+            android:text="@string/action_pick_external"
+            android:textAppearance="@style/TextAppearanceNormal"
+            android:textColor="@color/colorPrimary"
+            />
+    </info.guardianproject.pixelknot.views.SquareFrameLayout>
 
 <TextView
     android:layout_width="match_parent"
