--- a/PixelKnot/src/main/res/layout/content_send.xml
+++ b/PixelKnot/src/main/res/layout/content_send.xml
@@ -168,7 +168,7 @@
     </RelativeLayout>
 
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rlOutbox"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -177,7 +177,8 @@
         android:layout_gravity="top"
         android:gravity="top"
         android:background="@drawable/main_background"
-        android:clipToPadding="true"
+        android:clipToPadding="false"
+        android:clipChildren="false"
         android:visibility="invisible">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_outbox"
@@ -187,16 +188,15 @@
         <info.guardianproject.pixelknot.views.RoundedImageView
             android:id="@+id/outbox_zoom_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:scaleType="centerCrop"
             android:background="@android:color/transparent"
             android:visibility="invisible"
             android:focusable="false"
             android:focusableInTouchMode="false"
             />
-    </RelativeLayout>
+    </FrameLayout>
 
 
 </RelativeLayout>
