--- a/PixelKnot/src/main/res/layout/activity_albums.xml
+++ b/PixelKnot/src/main/res/layout/activity_albums.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:filterTouchesWhenObscured="true"
     >
 
     <android.support.design.widget.AppBarLayout
