--- a/PixelKnot/src/main/res/layout/activity_receive.xml
+++ b/PixelKnot/src/main/res/layout/activity_receive.xml
@@ -3,7 +3,9 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:filterTouchesWhenObscured="true"
+    >
 
     <include layout="@layout/content_receive" />
 
