--- a/PixelKnot/src/main/res/layout/share_item.xml
+++ b/PixelKnot/src/main/res/layout/share_item.xml
@@ -25,8 +25,8 @@
         android:id="@+id/tvShare"
         android:textColor="@android:color/black"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:textSize="12sp"
         android:fontFamily="sans-serif-condensed"
         android:gravity="top|center_horizontal"
