--- a/PixelKnot/src/main/res/layout/content_albums.xml
+++ b/PixelKnot/src/main/res/layout/content_albums.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/btnGalleryInfoOk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|end"
+                android:layout_gravity="end"
                 android:background="@null"
                 android:text="@string/gallery_info_ok"
                 android:textColor="@color/colorAccent" />
