--- a/PixelKnot/src/main/res/layout/content_send.xml
+++ b/PixelKnot/src/main/res/layout/content_send.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/btnGalleryInfoOk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|end"
+                android:layout_gravity="end"
                 android:background="@null"
                 android:text="@string/gallery_info_ok"
                 android:textColor="@color/colorAccent" />
@@ -70,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:elevation="3dp"
-            android:layout_gravity="top|left|start"
+            android:layout_gravity="top|start"
             android:gravity="center_vertical"
             android:hint="@string/secret_message_hint"
             android:textColorHint="@color/colorSecretMessageHint"
@@ -118,14 +118,14 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="3dp"
                     android:paddingBottom="3dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="@string/secret_password_too_short"
                     android:textColor="@android:color/white"
                     android:background="@drawable/edittext_error_background"
                     android:visibility="invisible"
-                    android:layout_gravity="left|start" />
+                    android:layout_gravity="start" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -137,19 +137,19 @@
                 android:id="@+id/tvMinLengthInfo"
                 android:textColor="@android:color/white"
                 android:visibility="gone"
-                android:layout_gravity="left|start" />
+                android:layout_gravity="start" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_gravity="right|end"
-                android:gravity="right|end">
+                android:layout_gravity="end"
+                android:gravity="end">
                 <Button
                     android:id="@+id/btnSkip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|end"
+                    android:layout_gravity="end"
                     android:visibility="gone"
                     android:background="@null"
                     android:text="@string/password_skip"
@@ -158,7 +158,7 @@
                     android:id="@+id/btnSet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|end"
+                    android:layout_gravity="end"
                     android:background="@null"
                     android:text="@string/password_set"
                     android:textColor="@color/colorAccent" />
