--- a/PixelKnot/src/main/res/layout/dialog_sent.xml
+++ b/PixelKnot/src/main/res/layout/dialog_sent.xml
@@ -4,8 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
+    android:paddingStart="24dp"
+    android:paddingEnd="24dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     >
