--- a/PixelKnot/src/main/res/layout/share_chooser.xml
+++ b/PixelKnot/src/main/res/layout/share_chooser.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:id="@+id/share_root"
     android:gravity="center_horizontal|bottom"
-    android:paddingLeft="4dp"
-    android:paddingRight="4dp"
+    android:paddingStart="4dp"
+    android:paddingEnd="4dp"
     android:background="@android:color/transparent"
     >
     <TextView
