--- a/PixelKnot/src/main/res/layout/content_receive.xml
+++ b/PixelKnot/src/main/res/layout/content_receive.xml
@@ -51,7 +51,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:theme="@style/EnterMessagePasswordHint">
+            android:theme="@style/EnterMessagePasswordHint"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@null"
+            app:passwordToggleDrawable="@drawable/ic_eye_primary_18dp"
+            >
 
             <info.guardianproject.pixelknot.views.FadingPasswordEditText
                 android:id="@+id/secret_password"
