--- a/PixelKnot/src/main/res/layout/outbox_item.xml
+++ b/PixelKnot/src/main/res/layout/outbox_item.xml
@@ -53,6 +53,7 @@
         android:paddingBottom="40dp"
         >
         <ImageView
+            android:id="@+id/ivSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_send_black_36dp"
