--- a/PixelKnot/src/main/res/xml/camera_capture_paths.xml
+++ b/PixelKnot/src/main/res/xml/camera_capture_paths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="camera_capture" path="Android/data/info.guardianproject.pixelknot/files/Pictures" />
+    <cache-path name="camera_capture" path="camera/" />
 </paths>
